# awakelion-logger

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .todo  CMakeLists.txt  README.md  README.zh_CN.md  TODO  docker-compose.yml  xmake.lua
.github/workflows/: ci.yml  cpp-linter.yml  super-linter-cpp.yml  super_linter_cpp.yml
cmake/: aw_logger_version.h.in  config_path.h.in
cmake/module/: FindIXWebSocket.cmake
config/: aw_logger_settings.json  settings_path.h.in
docker/: Dockerfile.server  Dockerfile.viewer
docs/: README.zh_CN.md
example/: hello_aw_logger.cpp
include/aw_logger/: appender.hpp  aw_logger.hpp  base_appender.hpp  config_path.h.in  exception.hpp  fmt_base.hpp  formatter.hpp  log_event.hpp  log_macro.hpp  logger.hpp  ring_buffer.hpp  typedef.hpp
include/aw_logger/impl/: base_appender_impl.hpp  console_appender_impl.hpp  file_appender_impl.hpp  formatter_impl.hpp  log_event_impl.hpp  logger_impl.hpp  ring_buffer_impl.hpp  websocket_appender_impl.hpp
server/: websocket_server.hpp
server/cpp/: websocket_server.cpp  websocket_server.hpp  websocket_server_impl.hpp
server/proto/: websocket_cmd.proto
server/python/: pyproject.toml
server/python/src/: websocket_server.py
src/: console_appender.cpp
test/: hello_aw_logger.cpp  load_benchmark.cpp  utils.hpp
viewer/: README.md  index.html  package-lock.json  package.json
viewer/src/: App.vue
viewer/src/assets/: base.css
viewer/src/components/: LogViewer.vue
